<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="#ffffff"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/txtSeAcaboTiempo"
            android:text="@string/txtSeAcaboTiempo"
            android:gravity="center"
            android:textColor="#0B2F3A"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtNumGolpeos"
            android:text="@string/txtNumGolpeos"
            android:gravity="center"
            android:textColor="#0B2F3A"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtNum"
            android:text="@string/txtNum"
            android:gravity="center"
            android:textColor="#0B2F3A"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--ANIMACIÓN-->
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="finjuego.json"
            android:paddingTop="10dp"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"/>
        <Button
            android:id="@+id/btJugarDeNuevo"
            android:text="@string/btJugarDeNuevo"
            android:background="@drawable/boton_personalizado"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btIrMenu"
            android:text="@string/btIrMenu"
            android:background="@drawable/boton_personalizado"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btVerPuntos"
            android:text="@string/btVerPuntos"
            android:background="@drawable/boton_personalizado"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </androidx.appcompat.widget.LinearLayoutCompat>



</RelativeLayout>