<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".DetalleJugador">
    
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <!-- FOTO DE PERFIL -->
        <ImageView
            android:id="@+id/imagenDetalle"
            android:src="@drawable/mario"
            android:layout_gravity="center"
            android:layout_width="150dp"
            android:layout_height="150dp"/>

        <!-- INFORMACION DEL JUGADOR -->
        <TextView
            android:id="@+id/titulo"
            android:text="@string/titulo"
            android:textColor="#9D763E"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- NOMBRE -->
        <TextView
            android:id="@+id/nombreDetalle"
            android:text="@string/nombreDetalle"
            android:textColor="#0489B1"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- CORREO -->
        <TextView
            android:id="@+id/correoDetalle"
            android:text="@string/correoDetalle"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- EDAD -->
        <TextView
            android:id="@+id/edadDetalle"
            android:text="@string/edadDetalle"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- PAIS -->
        <TextView
            android:id="@+id/paisDetalle"
            android:text="@string/paisDetalle"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- PUNTUACION -->
        <TextView
            android:id="@+id/puntosDetalles"
            android:text="@string/puntosDetalle"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textColor="#9D763E"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>