<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="#E6E6E6"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="10dp"
    android:elevation="2dp"
    app:contentPadding="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- FOTO DE PERFIL -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imagenJugador"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/mario"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <!-- NOMBRE -->
            <TextView
                android:id="@+id/nombreJugador"
                android:text="@string/nombreJugador"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!-- CORREO ELECTRÓNICO -->
            <TextView
                android:id="@+id/correoJugador"
                android:text="@string/correoJugador"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!-- Edad -->
            <TextView
                android:visibility="gone"
                android:id="@+id/edadJugador"
                android:text="@string/edadJugador"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!-- Pais -->
            <TextView
                android:visibility="gone"
                android:id="@+id/paisJugador"
                android:text="@string/paisJugador"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!-- PUNTAJE -->
            <TextView
                android:id="@+id/puntosJugador"
                android:text="@string/puntosJugador"
                android:textSize="25sp"
                android:textColor="#0040FF"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>