<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".Registro">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <!--IMAGEN-->
        <de.hdodenhof.circleimageview.CircleImageView
            android:src="@drawable/mario"
            android:layout_marginTop="5dp"
            android:layout_width="150dp"
            android:layout_height="150dp"/>

        <!--CORREO ELECTRÓNICO-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtCorreo"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                tools:ignore="VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--CONTRASEÑA-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtPassword"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                tools:ignore="VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--NOMBRE-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtNombre"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                tools:ignore="VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--EDAD-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtEdad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtEdad"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                tools:ignore="VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--PAIS-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtPais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtPais"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                tools:ignore="VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--FECHA ACTUAL-->
        <TextView
            android:id="@+id/txtFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/txtFecha"
            android:textSize="20sp" />

        <!--BOTON REGISTRO-->
        <Button
            android:id="@+id/btRegistroR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/boton_personalizado"
            android:text="@string/btRegistroR"
            tools:ignore="VisualLintButtonSize" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>