<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".CambioDePassword">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/actualPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/actualPassword"
                tools:ignore="Autofill,TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/nuevoPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nuevoPassword"
                tools:ignore="Autofill,TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/cambiarPassword"
            android:text="@string/cambiarPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="VisualLintButtonSize" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>